# Hackathon2024

./: README.md
.github/workflows/: rust.yml
my_game/: Cargo.toml
my_game/assets/: Maze.glb
my_game/src/: main.rs
