[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking", "jpeg", "png"]}
bevy_rapier3d = "0.25.0"
bevy_third_person_camera = "0.1.10"
